[gd_scene load_steps=5 format=3 uid="uid://b3m87nobrgvqj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_n17q2"]
[ext_resource type="Texture2D" uid="uid://bawn2lwxybv23" path="res://icon.svg" id="2_jwa75"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hxph0"]
radius = 32.0
height = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3ky8"]
size = Vector2(88, 160)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_n17q2")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hxph0")

[node name="Sprite2D" type="Sprite2D" parent="PlayerCollision"]
scale = Vector2(0.5, 1)
texture = ExtResource("2_jwa75")

[node name="AttackMarker" type="Marker2D" parent="."]

[node name="AttackArea" type="Area2D" parent="AttackMarker"]
position = Vector2(40, 0)

[node name="AttackCollision" type="CollisionShape2D" parent="AttackMarker/AttackArea"]
position = Vector2(44, 0)
shape = SubResource("RectangleShape2D_a3ky8")

[node name="Visual Hitbox" type="Sprite2D" parent="AttackMarker/AttackArea/AttackCollision"]
visible = false
modulate = Color(1, 0, 0, 0.768627)
position = Vector2(1.90735e-06, 0)
scale = Vector2(0.6875, 1.25)
texture = ExtResource("2_jwa75")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
